# PQEnalyzer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
PQEnalyzer/: __init__.py  __main__.py  _logging.py  app.py  config.py  custom_theme.py  energy_access.py  read_files.py
PQEnalyzer/apps/: __init__.py  app.py  app_layout.py  file_watcher.py  termapp.py  tui.py
PQEnalyzer/classes/: __init__.py  app.py  plot.py  plot_histogram.py  plot_time.py  reader.py  statistic.py
PQEnalyzer/gui/: __init__.py  app.py
PQEnalyzer/plots/: __init__.py  features.py  labels.py  options.py  plot.py  plot_dashboard.py  plot_histogram.py  plot_time.py  terminal_chart.py  termplot.py  theme.py  value_readout.py
PQEnalyzer/readers/: __init__.py  box_reader.py  factory.py  reader.py
PQEnalyzer/statistics/: __init__.py  statistic.py
data/acof1/: md-01.info  md-02.info
examples/: box-01.box  box-02.box  diff-run-a.en  diff-run-a.info  diff-run-b.en  diff-run-b.info  md-01.en  md-02.en  md-03.info
tests/: test_app.py  test_cli.py  test_energy_access.py  test_logging.py  test_read_files.py  test_reader.py  test_version.py
tests/apps/: test_app.py  test_file_watcher.py  test_tui.py
tests/benchmark/: test_reader_benchmark.py  test_statistic_benchmark.py
tests/classes/: test_app.py  test_plot.py  test_plot_histogram.py  test_plot_time.py  test_reader.py  test_statistic.py
tests/data/: md-01.en  md-01.info  md-02.en  md-02.info  md-03.en  md-03.info
tests/e2e/: test_cli_modes.py
tests/plots/: test_features.py  test_gui_plots.py  test_labels.py  test_terminal_chart.py  test_termplot.py  test_theme.py
tests/reader/: test_box_reader.py  test_factory.py  test_reader.py
tests/statistics/: test_statistic.py
