[build-system]
requires = ["setuptools>=42", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "PQEnalyzer"
dynamic = ["version"]
authors = [
    {name="Josef M. Gallmetzer", email="gallmetzer.josef@gmail.com"},
    {name="Leo Christanell", email="leochristanell@gmail.com"},
    {name="Jakob Gamper", email="97gamjak@gmail.com"}
]
description = "A package that help analyze PQ energy and parameter output."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "PQAnalysis>=1.0",
    "beartype",
    "customtkinter",
    "matplotlib",
    "argcomplete",
    "numpy",
    "tk",
    "Pillow",
    "scipy",
    "plotext",
    "InquirerPy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-benchmark",
]

[tool.setuptools_scm]
version_file = "PQEnalyzer/__version__.py"

[tool.pytest.ini_options]
markers = [
    "benchmark: performance benchmark tests",
    "e2e: end-to-end CLI and GUI smoke tests",
]

[tool.coverage.run]
omit = [
    "PQEnalyzer/__main__.py",
    "PQEnalyzer/__version__.py",
    "PQEnalyzer/apps/*",
    "PQEnalyzer/plots/*",
]

[project.scripts]
pqenalyzer = "PQEnalyzer.__main__:main"
